Fixed gaps on 125% scaled screen size

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -5,20 +5,12 @@
 }
 
 body {
-  height: 100%;
+  height: 100vh;
 }
-Header,
+
 Footer {
   height: 6vh;
-  z-index: 20;
-}
-
-Header {
-  top: 0px;
-  position: sticky;
-}
-
-Footer {
+  z-index: 2;
   position: fixed;
   width: 100%;
   bottom: 0;
