--- a/src/app/ui/styles/divider.module.scss
+++ b/src/app/ui/styles/divider.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: var(--main);
   width: 100%;
-  padding: 20vh 0 0 0;
+  padding: 5vh 0 0 0;
   height: 60%;
   position: absolute;
 }
@@ -13,16 +13,10 @@
   clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 100%);
   background-color: var(--main2);
   position: absolute;
-  bottom: 5vh;
+  bottom: 0vh;
   width: 100%;
 }
 
 .view {
   height: 100%;
-}
-
-@media (max-width: 768px) {
-  .parttop {
-    padding: 5vh 0 0 0;
-  }
 }
